[package]
name = "cavetown"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[features]
transport = ["bevy_renet/transport"]

[dependencies]
bevy = "0.12"
bevy-inspector-egui = "0.21.0"
bevy_renet = { version = "0.0.10", features = ["serde"] }
bincode = "1.3.3"
clap = { version = "4.4.9", features = ["derive"] }
local-ip-address = "0.5.6"
serde = "1.0.193"
